[package]
name = "runwrap"
version = "0.1.0"
authors = ["Viktor Eikman <viktor.eikman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
partial_application = "0.2"
pulldown-cmark = "0.8"
textwrap = "0.13"

[dev-dependencies]
pretty_assertions = "0"
