[package]
name = "runwrap"
version = "0.1.0"
authors = ["Viktor Eikman <viktor.eikman@gmail.com>"]
edition = "2018"
description = "Text wrapping for Markdown"
readme = "README.md"
repository = "https://github.com/veikman/runwrap"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
partial_application = "0.2"
pulldown-cmark = "0.8"
textwrap = "0.13"

[dev-dependencies]
pretty_assertions = "0"
rstest = "0.10"
