[package]
name = "runwrap"
version = "0.3.0-SNAPSHOT"
authors = ["Viktor Eikman <viktor.eikman@gmail.com>"]
edition = "2018"
description = "Text wrapping for Markdown"
readme = "README.md"
repository = "https://github.com/veikman/runwrap"
license = "GPL-3.0-or-later"
keywords = ["text", "markdown", "vcs"]
include = ["src/", "LICENSE", "*.md"]

[dependencies]
partial_application = "0.2"
pulldown-cmark = "0.8"
textwrap = "0.14"

[dev-dependencies]
pretty_assertions = "0"
rstest = "0.10"
